[tool.poetry]
name = "inx-make-laser-path"
version = "0.1.0"
description = ""
authors = ["yokobond <koji.yokokawa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
setup = "python ./scripts/setup.py inx_make_laser_path inx_make_laser_path"
